fix/treeselect focus error on firefox

--- a/src/styles/treeSelect.less
+++ b/src/styles/treeSelect.less
@@ -78,7 +78,7 @@
     }
 
     .@{treeSelect-prefix}-input {
-      display: inline-flex;
+      display: block;
       min-width: 12px;
       flex: 1;
       margin-bottom: @padding-base-vertical;
@@ -87,10 +87,6 @@
 
       &:after {
         content: '\feff ';
-      }
-
-      &.@{treeSelect-prefix}-full {
-        display: block;
       }
     }
 
